nginx-deployment.yaml
# Copyright 2017 the Heptio Ark contributors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-studentNN
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    annotations:
      backup.velero.io/backup-volumes: nginx-data
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: docker.io/bitnami/nginx
        name: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-data
          mountPath: /app/test
      volumes:
      - name: nginx-data
        persistentVolumeClaim:
          claimName: nginx-test
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: nginx-studentNN
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nginx
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  namespace: nginx-studentNN
  labels:
    app: nginx
    service: nginx
spec:
  to:
    kind: Service
    name: nginx
  port:
    targetPort: 8080
